[package]
name = "lending-stream"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/lending-stream"
documentation = "https://docs.rs/lending-stream"
description = "A lending version of Stream"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[features]

[dependencies]
futures-core = "0.3.28"
pin-project = "1.1.3"

[dev-dependencies]
futures-lite = "1.13.0"
